🐛 Corrected CRN validation
Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/server/views/match-manual.njk
+++ b/server/views/match-manual.njk
@@ -93,7 +93,7 @@
                         classes: "govuk-input--width-10",
                         id: "crn",
                         name: "crn",
-                        pattern: "[A-Za-z][0-9]{6}",
+                        pattern: "^[A-Za-z][0-9]{6}$",
                         errorMessage: errorMessage,
                         value: session.crn
                     }) }}
