--- a/server/views/components/key-details-bar/template.njk
+++ b/server/views/components/key-details-bar/template.njk
@@ -24,11 +24,12 @@
             <div class="pac-key-details-bar-flex">
                 <div class="pac-key-details-bar-flex__child pac-probation-status">
                     <span class="govuk-body"><strong>Probation status: </strong>
-                        {% if params.probationStatus | string | lower !== "possible ndelius record" if params.probationStatus %}
-                            {{ params.probationStatus | string | capitalize }}{% if params.breach %} (Breach){% endif %}
-                        {% else %}
-                            Possible NDelius record
-                        {% endif %}
+                         {% if params.probationStatus | string | lower === "possible ndelius record" or params.probationStatus | string | lower === "no record" if params.probationStatus %}
+                            {{ params.probationStatus | string | capitalize }}
+                         {% else %}
+                             {{ params.probationStatus | string | capitalize + ' (PSR)' }}
+                             {% if params.breach %} (Breach) {% endif %}
+                         {% endif %}
                     </span>
                 </div>
             </div>
