🚑 Add noreferrer to feedback link
Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -106,7 +106,7 @@
       tag: {
         text: "Feedback"
       },
-      html: '<a class="govuk-link govuk-link--no-visited-state" href="https://docs.google.com/forms/d/e/1FAIpQLScluoDOXsJ_XBO3iOp283JE9mN3vTVNgEJcPNDHQQvU-dbHuA/viewform?usp=sf_link" target="_blank">Give us your feedback</a> to help us improve this service.'
+      html: '<a class="govuk-link govuk-link--no-visited-state" href="https://docs.google.com/forms/d/e/1FAIpQLScluoDOXsJ_XBO3iOp283JE9mN3vTVNgEJcPNDHQQvU-dbHuA/viewform?usp=sf_link" rel="noreferrer" target="_blank">Give us your feedback</a> to help us improve this service.'
     }) }}
   </div>
 {% endblock %}
