--- a/server/views/components/key-details-bar/template.njk
+++ b/server/views/components/key-details-bar/template.njk
@@ -24,11 +24,11 @@
             <div class="pac-key-details-bar-flex">
                 <div class="pac-key-details-bar-flex__child pac-probation-status">
                     <span class="govuk-body"><strong>Probation status: </strong>
-                        {% set probationStatusInfo = params.probationStatus | string | capitalize %}
-                         {% if params.probationStatus | string | lower === "possible ndelius record" or params.probationStatus | string | lower === "no record" if params.probationStatus %}
-                            {{ probationStatusInfo }}
+                        {% set probationStatusInfo = params.probationStatus | string %}
+                         {% if probationStatusInfo | lower === "possible ndelius record" or probationStatusInfo | lower === "no record" if probationStatusInfo %}
+                            {{ probationStatusInfo | capitalize }}
                          {% else %}
-                             {{ probationStatusInfo }}
+                             {{ probationStatusInfo | capitalize }}
                              {% if params.awaitingPsr %} (PSR) {% endif %}
                              {% if params.breach %} (Breach) {% endif %}
                          {% endif %}
