--- a/server/views/edit-courts.njk
+++ b/server/views/edit-courts.njk
@@ -14,6 +14,16 @@
   }) }}
 {%- endfor -%}
 
+{% block javascripts %}
+  <script src="/assets/accessible-autocomplete.min.js"></script>
+  <script>
+    accessibleAutocomplete.enhanceSelectElement({
+      defaultValue: '',
+      selectElement: document.querySelector('#pac-select-court')
+    })
+  </script>
+{% endblock %}
+
 {% block content %}
   <form method="post" name="selectCourt" novalidate>
 
@@ -104,12 +114,5 @@
     </div>
 
   </form>
-
-  <script>
-    accessibleAutocomplete.enhanceSelectElement({
-      defaultValue: '',
-      selectElement: document.querySelector('#pac-select-court')
-    })
-  </script>
 
 {% endblock %}
